test/spec_vectors/load64/fail/module_17.wat
(module (memory i64 1) (func $load16_s_i32 (i32.load16_s (i64.const 0))))